# agent-doctor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
adapters/: README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: config.rs  doctor.rs  install.rs  mod.rs  policy.rs  profile.rs  repair.rs  setup.rs  sync.rs  workspace.rs
crates/agent-doctor-core/: Cargo.toml
crates/agent-doctor-core/src/: doctor.rs  lib.rs  presets.rs  profile.rs  repair.rs
crates/agent-doctor-core/src/adapters/: claude_code.rs  codex.rs  hermes.rs  mod.rs  openclaw.rs  util.rs
crates/agent-doctor-core/src/install/: mod.rs
crates/agent-doctor-core/src/lifecycle/: hermes.rs  mod.rs  runner.rs
crates/agent-doctor-core/src/probe/: config.rs  mod.rs  schema.rs
crates/agent-doctor-core/src/probe/runtimes/: claude_code.rs  codex.rs  hermes.rs  mod.rs  openclaw.rs
crates/agent-doctor-core/src/repair/: execute.rs  explain.rs  mask.rs  mod.rs  planner.rs  repair_loop.rs  restore.rs
crates/agent-doctor-core/src/repair/llm/: mod.rs
crates/agent-doctor-core/src/repair/playbooks/: hermes.rs  mod.rs
crates/agent-doctor-core/src/repair/tools/: diff.rs  discover.rs  executor.rs  mod.rs  patch.rs  policy.rs
crates/agent-doctor-core/src/runtime/: bash_allowlist.rs  mod.rs  registry.rs
crates/agent-doctor-core/src/setup/: merge.rs  mod.rs
crates/agent-doctor-core/src/workspace/: backends.rs  baseline.rs  claude_mcp.rs  fix.rs  hook_status.rs  matrix.rs  mod.rs  paths_check.rs  shell.rs  snapshot.rs
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src/: i18n.ts  main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ROADMAP.md  capability-matrix.md  development.md  enterprise.md  install.md  repair-safety.md  workspace.md
docs/examples/: profiles.example.yaml
scripts/: check.sh
(+6 files in other folders)
