[workspace]
resolver = "2"
members = ["crates/agent-doctor-core", "cli", "desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Agent Doctor Contributors"]

[workspace.dependencies]
agent-doctor-core = { path = "crates/agent-doctor-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
