[package]
name = "agent-doctor"
description = "Manage desktop AI agents — discover, configure, and sync profiles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "agent-doctor"
path = "src/main.rs"

[dependencies]
agent-doctor-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
