[package]
name = "agent-doctor-core"
description = "Shared discovery, doctor, and company profile logic for Agent Doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
toml = "1.1.2"

[dev-dependencies]
tempfile = "3"
